k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fc-backend
  namespace: figurecollecting
  labels:
    app: fc-backend
    app.kubernetes.io/name: fc-backend
    app.kubernetes.io/part-of: figure-collector
spec:
  type: ClusterIP
  selector:
    app: fc-backend
  ports:
    - port: 5050
      targetPort: 5050
      protocol: TCP
      name: http
